src/objects/ManyWhoFlow__c.object
<CustomObject>
    <fields>
        <fullName>JoinUri__c</fullName>
        <label>JoinUri</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>StateJSON__c</fullName>
        <label>StateJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ManyWho Flow</label>
    <nameField>
        <label>ManyWhoFlow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManyWho Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>